<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/signUpUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:hint="@string/username_signup"
        android:inputType="text" />

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password_signup"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button" />

</LinearLayout>
