<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HubActivity">


    <ImageView
        android:id="@+id/hubActivityBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_of_nature_displaying_a_forest_to_the_left_of_a_river_and_a_desert_to_the_right"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gemini_generated_image_p757d0p757d0p757" />

    <Button
        android:id="@+id/editPartyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_party"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

<!--    <RadioGroup-->
<!--        android:id="@+id/worldSelectButtons"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:layout_margin="15dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/worldView"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/worldSelectButton"
        android:layout_width="100dp"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toStartOf="@+id/worldView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/fight"
        />

    <View
        android:id="@+id/worldView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:layout_marginEnd="311dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/worldSelectButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="4dp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/worldSelectButton" />

    <Button
        android:id="@+id/editUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="4dp"
        android:text="@string/edit_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signOutButton"
        />

    <TextView
        android:id="@+id/userView"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textAppearance="@color/black"
        android:text="@string/usernamehub"
        android:textSize="60dp"
        app:layout_constraintStart_toEndOf="@id/worldSelectButton"
        app:layout_constraintTop_toBottomOf="@id/worldSelectButton" />

</androidx.constraintlayout.widget.ConstraintLayout>