<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity">

    <Button
        android:id="@+id/statsExitButton"
        android:layout_width="99dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/exit"
        android:textSize="24sp"
        android:gravity="center"/>


    <Button
        android:id="@+id/swapButton"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statsExitButton" />

    <ImageView
        android:id="@+id/animalImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="292dp"
        app:layout_constraintStart_toEndOf="@+id/swapButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statsTextView1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/stats"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/animalStats"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/animalImage"
        app:layout_constraintTop_toBottomOf="@id/statsTextView1" />

    <TextView
        android:id="@+id/animalName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/animalImage"
        app:layout_constraintEnd_toStartOf="@id/statsTextView1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:text="@string/push_button_to_swap"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>