<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleActivity">


    <ImageView
        android:id="@+id/forestActivityBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_of_nature_displaying_a_forest_to_the_left_of_a_river_and_a_desert_to_the_right"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forestarena"/>

    <ProgressBar
        android:id="@+id/opponentHealthBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="241dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opponentCreatureName" />

    <ImageView
        android:id="@+id/opponentCreatureView"
        android:layout_width="165dp"
        android:layout_height="219dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/playerCreatureView"
        android:layout_width="167dp"
        android:layout_height="277dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/opponentCreatureName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opponentCreatureHealth"
        android:layout_width="90dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/opponentCreatureName"
        tools:layout_editor_absoluteY="57dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/playerCreatureHealth"
        android:layout_width="90dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/attackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/playerCreatureName" />

    <TextView
        android:id="@+id/playerCreatureName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/attackButton"
        app:layout_constraintStart_toStartOf="@id/attackButton" />

    <ProgressBar
        android:id="@+id/playerHealthBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="240dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/playerCreatureName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/exitBattleButton"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:text="@string/exit_battle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/attackButton"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:text="@string/attack"
        app:layout_constraintBottom_toTopOf="@id/exitBattleButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/combatLog"
        android:layout_width="241dp"
        android:layout_height="229dp"
        android:background="#E0E0E0"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opponentHealthBar"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>